Fix #101 - Update Part1 Step26 to match new requirements